# pomodorotimelapse

./: AboutDialog.cpp  AboutDialog.h  AboutDialog.ui  CMakeLists.txt  Camera.cpp  Camera.h  CaptureDesktopThread.cpp  CaptureDesktopThread.h  DesktopCapture.cpp  DesktopCapture.h  DesktopCapture.ini  DesktopCapture.rc.in  Main.cpp  MainWindow.cpp  MainWindow.h  MainWindow.ui  Pomodoro.cpp  Pomodoro.h  PomodoroStatistics.cpp  PomodoroStatistics.h  PomodoroStatistics.ui  ProbeResolutionsDialog.cpp  ProbeResolutionsDialog.h  ProbeResolutionsDialog.ui  RGB2YUV.h  Resolutions.h  Screenshot.cpp  Screenshot.h  TODO.txt  Utils.cpp  Utils.h  VP8Interface.cpp  VP8Interface.h  VPXInterface.cpp  VPXInterface.h  readme.md  webmEBMLwriter.cpp  webmEBMLwriter.h  webmIDs.h
Camera/: CaptureThread.cpp  MainWindow.cpp
installer/: script.iss.in
rsc/: resources.qrc  resources_face.qrc
rsc/pdn/: 0.pdn  1.pdn  2.pdn  3.pdn  4.pdn  5.pdn  6.pdn  7.pdn  8.pdn  alarm.pdn  application.pdn  config.pdn
